<resources>
    <string name="app_name">CanSee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="can_see">CanSee</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="validation_code">Validation Code</string>
    <string name="validation_code_desc">Please, type the verification code sent to</string>
    <string name="change_phone">Change Phone</string>
    <string name="profile_image">Profile Image</string>
    <string name="get_image_from">Get Image From</string>
    <string name="open_camera">open camera</string>
    <string name="open_gallery">open gallery</string>

    <string name="file_provider" translatable="false">it.cansee.com.fileprovider</string>

    <string name="pick_single">Please select your image</string>

    <plurals name="pick_multi">
        <item quantity="one">One image selected</item>
        <item quantity="other">%1$d images selected</item>
    </plurals>
    <plurals name="pick_multi_more">
        <item quantity="one">Please select one more image…</item>
        <item quantity="other">Please select %1$d more images…</item>
    </plurals>
    <string name="pick_multi_limit">You have more than %1$d images selected…</string>
</resources>