<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding"
    tools:context=".login_fragment.OTPFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/otp_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <TextView
        android:id="@+id/otp_txtTitle"
        style="@style/AppTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/can_see"
        app:layout_constraintBottom_toTopOf="@+id/otp_guid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <TextView
        android:id="@+id/otp_text1"
        style="@style/Head1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/validation_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/otp_guid" />

    <TextView
        android:id="@+id/otp_text2"
        style="@style/SubHead1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/validation_code_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_text1" />

    <TextView
        android:id="@+id/otp_txtPhone"
        style="@style/SubHead1Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_text2"
        tools:text="+964 78X XXX XXX3" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/primaryDarkColor"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_txtPhone"
        app:length="6"
        app:otp_text_size="24dp"
        app:width="40dp" />

    <Button
        android:id="@+id/otp_btnNext"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="@+id/otp_view"
        app:layout_constraintTop_toBottomOf="@+id/otp_view" />

    <Button
        android:id="@+id/otp_btnBack"
        style="@style/MutedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_phone"
        app:layout_constraintStart_toStartOf="@+id/otp_view"
        app:layout_constraintTop_toBottomOf="@+id/otp_view" />

</androidx.constraintlayout.widget.ConstraintLayout>